<resources>
    <string name="app_name">Laboratorio12</string>
    <string name="name">Adrian Flores</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="login">Login</string>
    <string name="correo">flo21500@uvg.edu.gt</string>
    <string name="mantener_sesi_n_activa">Mantener Sesión Activa</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="difolt">Default</string>
    <string name="success">Success</string>
    <string name="failure">Failure</string>
    <string name="empty">Empty</string>
</resources>