<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.HomeFragment">

    <Button
        android:id="@+id/button_mantener_sesion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/mantener_sesi_n_activa"
        android:layout_marginHorizontal="@dimen/margin_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/button_cerrar_sesion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cerrar_sesi_n"
        android:layout_marginHorizontal="@dimen/margin_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_mantener_sesion"
        />

    <Button
        android:id="@+id/button_default"
        android:textSize="@dimen/text_size"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/difolt"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_smol"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_success"
        app:layout_constraintTop_toBottomOf="@id/button_cerrar_sesion"
        />

    <Button
        android:id="@+id/button_success"
        android:textSize="@dimen/text_size"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/success"
        app:layout_constraintStart_toEndOf="@id/button_default"
        app:layout_constraintEnd_toStartOf="@id/button_failure"
        app:layout_constraintTop_toBottomOf="@id/button_cerrar_sesion"
        />

    <Button
        android:id="@+id/button_failure"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/failure"
        android:layout_marginHorizontal="@dimen/margin_smol"
        app:layout_constraintStart_toEndOf="@id/button_success"
        app:layout_constraintEnd_toStartOf="@id/button_empty"
        app:layout_constraintTop_toBottomOf="@id/button_cerrar_sesion"
        />

    <Button
        android:id="@+id/button_empty"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/empty"
        android:layout_marginEnd="@dimen/margin_medium"
        app:layout_constraintStart_toEndOf="@id/button_failure"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_cerrar_sesion"
        />

    <ImageView
        android:id="@+id/icon_homeFragment_status"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:src="@drawable/ic_baseline_check_circle_outline_24"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_default"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <TextView
        android:id="@+id/text_homeFragment_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/icon_homeFragment_status"
        tools:text="¡Operación exitosa!"
        />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_default"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>